<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:passwordToggleEnabled="true"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/註冊如下"
            android:textColor="#FFFFFF" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/帳號"
                    android:textColor="#FFFFFE"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/editText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:textColor="#FFFFFF"
                    tools:ignore="LabelFor" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/密碼"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/editText2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:textColor="#FFFFFF"
                    tools:ignore="LabelFor" />

            </TableRow>

        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button"
                android:layout_width="110dp"
                android:layout_height="90dp"
                android:layout_marginStart="50dp"
                android:layout_weight="1"
                android:background="@drawable/button1"
                android:text="@string/註冊"
                android:textColor="#FFFFFF"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/button2"
                android:layout_width="110dp"
                android:layout_height="90dp"
                android:layout_marginLeft="88dp"
                android:layout_marginRight="50dp"
                android:layout_weight="1"
                android:background="@drawable/button1"
                android:text="@string/清除"
                android:textColor="#FFFFFF"
                style="?android:attr/buttonBarButtonStyle" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/在此顯示是否註冊成功"
            android:textColor="#2C91E1"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/登入如下"
            android:textColor="#FFFDFD" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/帳號"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/editText3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#000000"
                    android:textSize="24sp"
                    tools:ignore="LabelFor" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/密碼"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/editText4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp"
                    tools:ignore="LabelFor" />
            </TableRow>

        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button3"
                android:layout_width="110dp"
                android:layout_height="90dp"
                android:layout_marginLeft="50dp"
                android:layout_weight="1"
                android:background="@drawable/button1"
                android:text="@string/登入"
                android:textColor="#FFFFFF"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/button4"
                android:layout_width="110dp"
                android:layout_height="90dp"
                android:layout_marginLeft="88dp"
                android:layout_marginRight="50dp"
                android:layout_weight="1"
                android:background="@drawable/button1"
                android:text="@string/換頁"
                android:textColor="#FFFFFF"
                style="?android:attr/buttonBarButtonStyle" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/在此顯示是否登入成功"
            android:textColor="#FF5722"
            android:textSize="24sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>